# pycli

./: .gitignore  .travis.yml  LICENSE  README.md  cookiecutter.json  pytest.ini  requirements.txt
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .gitignore  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  setup.cfg  setup.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  _meta.py  _version.py
{{cookiecutter.project_name}}/tests/: test_cli.py  test_main.py
