[metadata]
name = {{ cookiecutter.project_name }}
description = {{ cookiecutter.project_short_description }}
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
license = MIT

[aliases]
test = pytest

[tool:pytest]
addopts =
    --verbose
    --cov {{ cookiecutter.project_slug }}
    --docstyle
    --flake8
    --isort
    --pep8
    --pylint
    --yapf
markers =
    pep8
    unit
    integration
python_files = tests/*
mock_use_standalone_module = true
flake8-ignore = tests/* ALL
docstyle_exclude = tests/*

[isort]
multi_line_output = 3
include_trailing_comma = true
known_first_party = {{ cookiecutter.project_slug }}

[yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = pep8
coalesce_brackets = true
dedent_closing_brackets = true
